# wedding-api

./: .env.example  .envrc  .gitignore  Cargo.nix  Cargo.toml  Dockerfile  README.md  default.nix  devenv.nix  docker-compose.yml  docker.nix  flake.nix  shell.nix
.cargo/: config.toml
.direnv/: nix-profile-25.05-csfywra6032psdbg  nix-profile-25.05-csfywra6032psdbg.rc
.github/workflows/: deploy.yml  rust.yml
.migration/src/: lib.rs  m20241201_143409_create_app_reservation_table.rs
app/: Cargo.toml
app/src/: lib.rs
app/src/auth/: auth_dto.rs  auth_middleware.rs  auth_service.rs
app/src/reservations/: reservation_service.rs
backend/: seed.rs
backend/routes/: crud.rs  mod.rs  upload_audio.rs
backend/utils/: mod.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/app/: mod.rs
crates/api/src/app/auth/: auth_controller.rs  auth_dto.rs  auth_middleware.rs  auth_service.rs  mod.rs
crates/api/src/app/reservations/: mod.rs  reservation_controller.rs  reservation_dto.rs  reservation_endpoint.rs  reservation_service.rs
crates/libs/database/: Cargo.toml
crates/libs/database/src/: lib.rs
crates/libs/server/src/: init.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/utils/src/jwt/: mod.rs
libs/server/: Cargo.toml
src/: main.rs
src/app/: Cargo.toml  lib.rs  main.rs  mod.rs
src/app/auth/: auth_controller.rs  auth_dto.rs  auth_middleware.rs  auth_service.rs  mod.rs
src/app/authors/: controllers.rs  models.rs  services.rs
src/app/reservations/: controllers.rs  mod.rs  models.rs  reservation_controller.rs  reservation_dto.rs  reservation_service.rs  services.rs
src/commons/constants/: endpoints.rs
src/commons/structs/: response.rs
src/libs/: axum.rs  mod.rs
src/libs/axum/: routes.rs
src/libs/axum/init/: mod.rs
src/libs/axum/routes/: mod.rs
src/libs/database/: Cargo.toml
src/libs/database/entities/: mod.rs
src/libs/docs/: Cargo.toml  lib.rs  openapi.json
src/libs/sea_orm/: connect.rs  mod.rs  test.rs  test_connect.rs
src/libs/sea_orm/entities/: app_reservation.rs  prelude.rs
src/libs/sea_orm/migration/: Cargo.toml
src/libs/sea_orm/schemas/: reservation.rs
src/libs/server/: Cargo.toml  init.rs
src/libs/storage/: Cargo.toml  lib.rs  service.rs
src/models/: mod.rs
src/routes/: upload_audio.rs
src/utils/: Cargo.toml  format_response.rs  lib.rs
src/utils/jwt/: mod.rs
src/utils/password/: mod.rs  test_hashing.rs
src/utils/structs/: response.rs
uploads/audio/: c144e981-e378-453f-9c16-a63310dd9504.webm
utils/: Cargo.toml
utils/src/structs/: response.rs
