[package]
name = "api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/maulanasodiqin/wedding-api"
license = "MIT"

[dependencies]
axum = "0.7.7"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
sea-orm = { version = "1.1.1", features = [ "sqlx-postgres", "macros", "with-json", "with-uuid"] }
uuid = { version = "1.11.0", features = ["v4"] }
utils = { path = "../utils" }
database = { path = "../libs/database" }
server = { path = "../libs/server" }
validator = { version = "0.19.0", features = ["derive"] }
jsonwebtoken = "9.3.0"
tower-http = { version = "0.6.2", features = ["cors"] }
