[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
sea-orm = { version = "1.1.1", features = [ "sqlx-postgres", "macros", "with-json", "with-uuid", "runtime-tokio", "runtime-tokio-native-tls"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
