[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[lib]
name = "storage"
path = "lib.rs"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde_json = "1.0"
hyper = "0.14"
log = "0.4.22"
env_logger = "0.11.5"
uuid = { version = "1.11.0", features = ["v4"] }
minio-rsc = { version = "0.2.3", features = ["fs-tokio"] }
bytes = "1.9.0"
reqwest = "0.12.9"
