[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = "1.1.1"
tokio = { version = "1.41.1", features = ["full"] }
sea-orm-migration = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio", "runtime-tokio-native-tls"] }
